syntax = "proto2";
package douyin.core;
option go_package = "../core;core";
message douyin_publish_action_request {
  required string token = 1; // 用户鉴权token
  required bytes data = 2; // 视频数据
  required string title = 3; // 视频标题
}

message douyin_publish_action_response {
  required int32 status_code = 1; // 状态码，0-成功，其他值-失败
  optional string status_msg = 2; // 返回状态描述
}